--- a/l10n/bundle.l10n.zh-cn.json
+++ b/l10n/bundle.l10n.zh-cn.json
@@ -2,10 +2,40 @@
     "Enable Auto Completion": "启用 自动触发补全",
     "Disable Auto Completion": "停用 自动触发补全",
     "Explain Selected Codes": "解释 这段代码",
+    "Please explain the following {0} code": "请解释以下{0}代码",
     "Optimize Selected Codes": "优化 这段代码",
+    "Please optimize and rewrite the following {0} code": "请优化并重写以下{0}代码",
     "Clean Selected Codes": "清理 这段代码",
+    "Please clean and rewrite the following {0} code": "请清理并重写以下{0}代码",
     "Generate Comment": "生成 注释",
+    "Please generate comments for the following {0} code": "请为以下{0}代码生成注释",
     "Generate Unit Test": "生成 单元测试",
+    "Please generate unit tests for the following {0} code": "请为以下{0}代码生成单元测试",
     "Check Performance": "检查 性能问题",
-    "Check Security": "检查 安全性问题"
+    "Check the following {0} code for any performance issues, and please provide optimization suggestions": "检查以下{0}代码,是否存在性能问题，请给出优化建议",
+    "Check Security": "检查 安全性问题",
+    "Check the following {0} code for any security issues, and please provide optimization suggestions": "检查以下{0}代码, 是否存在安全性问题，请给出优化建议",
+    "select coding task": "选择快捷指令：",
+    "Ask CodeShell": "向CodeShell提问",
+    "Please enter your question description": "请输入您的问题描述",
+    "question description": "问题描述",
+    "Start a new session": "开启新会话",
+    "Stop Gen": "停止生成",
+    "History": "历史",
+    "Send": "发送",
+    "Disable auto code completion (can be triggered by shortcut keys)": "禁用 自动触发代码补全（可由快捷键触发）",
+    "Enable automatically code completion (triggered when input stops)": "启用 自动触发代码补全（输入停止时触发）",
+    "Enable": "启用",
+    "Answer :": "回答 :",
+    "Answer output completed": "回答输出完毕!",
+    "Ask here, press Enter key to send": "在这里提问, Enter发送",
+    "Line break": "换行",
+    "Unknown Language type": "无法确定语言类型！",
+    "Disable": "禁用",
+    "Request timeout, please try again later": "请求超时，请稍后重试。",
+    "Please select a section of code": "请选中一段代码",
+    "Back": "返回",
+    "How about this answer?": "这个回答怎么样？",
+    "Question :": "问题 :",
+    "Homepage": "首页"
 }
